unpackaged/main/default/objects/Answer__c/fields/Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criteria Met</label>
    <type>Checkbox</type>
</CustomField>