unpackaged/main/default/objects/Answer__c/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <formula>TEXT(Intake__r.litify_pm__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Status</label>
    <type>Text</type>
</CustomField>