unpackaged/main/default/objects/Answer__c/fields/Question_Label__c.field-meta.xml
<CustomField>
    <fullName>Question_Label__c</fullName>
    <label>Question Label</label>
    <type>TextArea</type>
</CustomField>