unpackaged/main/default/objects/Answer__c/fields/Questionnaire_Question__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>Questionnaire_Question__c</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>