unpackaged/main/default/objects/Answer__c/fields/Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Section_Label__c</fullName>
    <label>Section Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>